# model-link

./: .gitignore  CMakeLists.txt  README.md
src/: clirunner.cpp  clirunner.h  downloadmanager.cpp  downloadmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  modelparser.cpp  modelparser.h  modelservice.cpp  modelservice.h
tests/: CMakeLists.txt  test_download.cpp  test_modelparser.cpp  test_modelservice.cpp
